# box-fraise-platform

./: .clippy.toml  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SCORECARD.md  WORKFLOW.md  docker-compose.yml
domain/: Cargo.toml
domain/src/: audit.rs  config.rs  crypto.rs  db.rs  error.rs  event_bus.rs  events.rs  lib.rs
domain/src/auth/: apple.rs  apple_attest.rs  device.rs  mod.rs  staff.rs
domain/src/crypto/: ed25519.rs  mod.rs
domain/src/domain/: mod.rs
domain/src/domain/attestation_tokens/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/attestations/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/auth/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/background_checks/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/beacons/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/businesses/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/dorotka/: mod.rs  service.rs
domain/src/domain/identity_credentials/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/keys/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/messages/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/orders/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/platform_configuration/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/presence/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/soultokens/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/staff/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/support/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/users/: mod.rs  repository.rs  service.rs  types.rs
domain/src/domain/verification_events/: mod.rs  repository.rs  service.rs  types.rs
domain/src/types/: ids.rs  mod.rs  stripe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hmac_verify.rs  sanitise.rs
integrations/: Cargo.toml
integrations/src/: anthropic.rs  expo_push.rs  lib.rs  resend.rs  stripe.rs
server/: .env.example  Cargo.toml  Dockerfile  README.md  deny.toml  nixpacks.toml  railway.toml
server/migrations/: 000_drop_legacy_tables.sql  000_initial_schema.sql  001_add_public_key_to_device_attestations.sql  001_bfip_schema.sql  002_create_attest_challenges.sql  004_loyalty.sql  005_venue_drinks_and_orders.sql  006_nfc_stickers.sql  007_fix_check_constraints.sql  008_business_id_on_devices_and_orders.sql  009_webhook_pi_anchors.sql  013_drop_dormant_tables.sql  014_is_dorotka_comment.sql  018_businesses_column_defaults.sql  019_enums_to_text.sql  022_drop_dead_domain_tables.sql  023_drop_dead_feature_tables.sql  026_drop_eth_address.sql  027_drop_domain_tables.sql  028_drop_dead_user_columns.sql  README.md
server/migrations/archive/: 003_square_oauth_and_staff.sql  007_fix_check_constraints.sql  009_webhook_pi_anchors.sql  010_drop_tournaments.sql  011_rename_popup_rsvps_popup_id.sql  012_memberships_user_id_unique.sql  015_orders_user_id.sql  016_businesses_verified_owner.sql  017_memberships_schema_drift.sql  020_drop_renewal_notified_at.sql  021_drop_tokens_domain_tables.sql  024_drop_tip_and_legitimacy.sql  025_dead_column_cleanup.sql  029_drop_stale_tables.sql
server/src/: app.rs  audit.rs  auth.rs  config.rs  crypto.rs  db.rs  error.rs  events.rs  lib.rs  main.rs  openapi.rs
server/src/auth/: apple.rs  apple_attest.rs  mod.rs  staff.rs
server/src/db/: mod.rs
server/src/domain/: mod.rs
server/src/domain/admin/: routes.rs
server/src/domain/art/: routes.rs  types.rs
server/src/domain/attestation_tokens/: routes.rs
server/src/domain/attestations/: mod.rs  routes.rs
server/src/domain/auth/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
server/src/domain/background_checks/: mod.rs  routes.rs
server/src/domain/beacons/: mod.rs  routes.rs
server/src/domain/businesses/: mod.rs  repository.rs  routes.rs  types.rs
server/src/domain/campaigns/: repository.rs  routes.rs  types.rs
server/src/domain/catalog/: mod.rs  repository.rs  routes.rs  types.rs
server/src/domain/contracts/: routes.rs  types.rs
server/src/domain/devices/: repository.rs  routes.rs  service.rs  types.rs
server/src/domain/dorotka/: mod.rs  routes.rs  service.rs
server/src/domain/gifts/: routes.rs  types.rs
server/src/domain/identity_credentials/: mod.rs  routes.rs
server/src/domain/keys/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
server/src/domain/loyalty/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
server/src/domain/memberships/: repository.rs  routes.rs  types.rs
server/src/domain/messages/: mod.rs  repository.rs  routes.rs  types.rs
server/src/domain/nfc/: routes.rs
server/src/domain/orders/: mod.rs  repository.rs  routes.rs  service.rs  types.rs
server/src/domain/payments/: routes.rs
server/src/domain/platform_configuration/: routes.rs
server/src/domain/popups/: routes.rs  types.rs
server/src/domain/portal/: routes.rs
server/src/domain/presence/: mod.rs  routes.rs
server/src/domain/search/: routes.rs
server/src/domain/soultokens/: mod.rs  routes.rs
server/src/domain/squareoauth/: mod.rs  repository.rs  routes.rs  service.rs
server/src/domain/staff/: mod.rs  routes.rs
server/src/domain/staff_web/: mod.rs  routes.rs  scan.js
server/src/domain/support/: routes.rs
server/src/domain/tokens/: routes.rs  types.rs
server/src/domain/tournaments/: routes.rs  types.rs
server/src/domain/users/: mod.rs  repository.rs  routes.rs  types.rs
server/src/domain/ventures/: routes.rs  types.rs
server/src/domain/venue_drinks/: mod.rs  (+4 more)
server/src/http/: mod.rs
server/src/integrations/: anthropic.rs  expo_push.rs  mod.rs  resend.rs  square.rs  stripe.rs
server/src/jobs/: mod.rs
server/src/middleware/: hmac.rs  mod.rs  rate_limit.rs
server/src/routes/: auth.rs  health.rs
server/src/types/: mod.rs  stripe.rs
server/tests/: auth.rs  common.rs  contracts.rs  handler.rs  integration.rs  loyalty.rs  square_oauth.rs  square_webhook.rs  venue_drinks.rs
(+16 files in other folders)
