[package]
name    = "box-fraise-domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "box_fraise_domain"
path = "src/lib.rs"

[dependencies]
# HTTP (only for IntoResponse on AppError — no route handlers here)
axum = { version = "0.8", features = ["macros"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Database
sqlx = { workspace = true }

# Redis
deadpool-redis = { workspace = true }
redis          = { workspace = true }

# HTTP client (Apple JWKS, Anthropic via integrations)
reqwest = { workspace = true }

# Serialisation
serde      = { workspace = true }
serde_json = { workspace = true }

# Utilities
chrono    = { workspace = true }
uuid      = { workspace = true }
anyhow    = { workspace = true }
thiserror = { workspace = true }
secrecy   = { workspace = true }
tracing   = { workspace = true }

# Crypto
ring        = { workspace = true }
base64      = { workspace = true }
hex         = { workspace = true }
aes-gcm     = "0.10"
sha2        = "0.10"
sha3        = "0.10"
rand        = "0.8"
subtle      = "2"
k256        = { version = "0.13", features = ["ecdsa"] }
p256        = { version = "0.13", features = ["ecdsa", "pkcs8"] }
bcrypt      = "0.15"
jsonwebtoken = "9"

# App Attest
ciborium    = "0.2"
x509-parser = "0.16"

# Integrations
box-fraise-integrations = { path = "../integrations" }
