[package]
name    = "box-fraise-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web
axum            = { version = "0.8", features = ["macros"] }
axum-extra      = { version = "0.10", features = ["typed-header"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tokio           = { version = "1", features = ["full"] }

# Database
sqlx            = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Crypto
ring            = "0.17"

# Auth
jsonwebtoken    = "9"

# Serialisation
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"

# HTTP client (Stripe, Apple, Resend, push)
reqwest         = { version = "0.12", features = ["json"] }

# Utilities
chrono          = { version = "0.4", features = ["serde"] }
uuid            = { version = "1", features = ["v4", "serde"] }
dotenvy         = "0.15"
thiserror       = "2"
anyhow          = "1"
base64          = "0.22"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
