[package]
name    = "box-fraise-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

# ── Web ──────────────────────────────────────────────────────────────────────
axum        = { version = "0.8", features = ["macros"] }
axum-extra  = { version = "0.10", features = ["typed-header"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "request-id",
    "sensitive-headers",
    "set-header",
] }
tokio       = { version = "1", features = ["full"] }

# ── Database ──────────────────────────────────────────────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# ── Crypto ────────────────────────────────────────────────────────────────────
ring  = "0.17"                                              # HMAC-SHA256
p256  = { version = "0.13", features = ["ecdsa", "pkcs8"] }# Apple Sign In / App Attest
k256  = { version = "0.13", features = ["ecdsa"] }          # Cardputer EIP-191
sha2  = "0.10"
sha3  = "0.10"                                              # Keccak-256 for EIP-191
rand  = "0.8"
hex   = "0.4"

# ── App Attest ────────────────────────────────────────────────────────────────
ciborium    = "0.2"     # CBOR decode of attestation objects
x509-parser = "0.16"   # certificate chain verification

# ── Auth ──────────────────────────────────────────────────────────────────────
jsonwebtoken = "9"

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── HTTP client (Stripe, Apple JWKS, Resend, Anthropic, Cloudinary, Expo) ─────
reqwest = { version = "0.12", features = ["json", "multipart"] }

# ── Scheduling ────────────────────────────────────────────────────────────────
tokio-cron-scheduler = "0.10"

# ── Redis (nonce deduplication for replay prevention) ─────────────────────────
# Opt-in: set REDIS_URL env var to activate. Falls back to in-process HashMap
# (single instance only) when Redis is not configured.
deadpool-redis = { version = "0.13", features = ["rt_tokio_1"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1",   features = ["v4", "serde"] }
dotenvy   = "0.15"
thiserror = "2"
anyhow    = "1"
base64    = "0.22"
bcrypt    = "0.15"
secrecy   = "0.8"
url       = "2"

# ── Observability ─────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
