[package]
name    = "box-fraise-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "box_fraise_server"
path = "src/lib.rs"

[dependencies]

# ── Workspace crates ──────────────────────────────────────────────────────────
box-fraise-domain       = { path = "../domain" }
box-fraise-integrations = { path = "../integrations" }

# ── Web ──────────────────────────────────────────────────────────────────────
axum        = { version = "0.8", features = ["macros"] }
axum-extra    = { version = "0.10", features = ["typed-header"] }
tower-cookies = { version = "0.11", features = ["private"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = [
    "cors",
    "timeout",
    "trace",
    "compression-gzip",
    "request-id",
    "sensitive-headers",
    "set-header",
] }
tokio       = { workspace = true }

# ── Database ──────────────────────────────────────────────────────────────────
sqlx = { workspace = true }

# ── Redis ─────────────────────────────────────────────────────────────────────
deadpool-redis = { workspace = true }

# ── Crypto ────────────────────────────────────────────────────────────────────
ring  = { workspace = true }
base64 = { workspace = true }
hex    = { workspace = true }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { workspace = true }
serde_json = { workspace = true }

# ── HTTP client ───────────────────────────────────────────────────────────────
reqwest = { workspace = true }

# ── Utilities ─────────────────────────────────────────────────────────────────
chrono    = { workspace = true }
uuid      = { workspace = true }
dotenvy   = "0.15"
anyhow    = { workspace = true }
thiserror = { workspace = true }
secrecy   = { workspace = true }
url        = "2"
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── OpenAPI ───────────────────────────────────────────────────────────────────
utoipa = { version = "5" }

[dev-dependencies]
sqlx               = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tokio              = { version = "1",   features = ["full"] }
tower              = { version = "0.5", features = ["util"] }
testcontainers     = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
wiremock               = "0.6"
jsonwebtoken = "9"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1",   features = ["v4", "serde"] }
proptest     = "1"
fake         = { version = "2", features = ["derive"] }
ring         = { workspace = true }
base64       = { workspace = true }
regex        = "1"
secrecy      = { workspace = true }
